Bug 169225 - [26.2] Color emoji background appears black with certain fonts
Summary: [26.2] Color emoji background appears black with certain fonts
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-11-03 10:19 UTC by Takenori Yasuda
Modified: 2025-11-21 14:10 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Test document with embedded color font (46.80 KB, application/vnd.oasis.opendocument.text)
2025-11-20 10:37 UTC, Khaled Hosny
Details
Screenshot on master (679.26 KB, image/png)
2025-11-20 10:39 UTC, Khaled Hosny
Details
Screenshot with 25.8.3.2 (1.45 MB, image/png)
2025-11-20 10:46 UTC, Khaled Hosny
Details
Screenshot on master with Skia/Raster (1.47 MB, image/png)
2025-11-20 10:53 UTC, Khaled Hosny
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Takenori Yasuda 2025-11-03 10:19:29 UTC
Description:
With certain color fonts (e.g., Segoe UI Emoji, Twemoji Mozilla), emoji backgrounds are rendered as black. These areas are not supposed to be colored in the original font definition.

This issue has been confirmed in Writer, Calc, Impress, and Draw.

Steps to Reproduce:
1. Insert any emoji (e.g., 🗾).
2. Apply a color font (e.g., Segoe UI Emoji).

Actual Results:
Parts of the emoji that should be transparent or uncolored appear black.
In the example above, the land is green, but the sea area is rendered in black.

Expected Results:
Colors should be rendered as defined by the font.
In the example above, only the land should appear green, and the sea area should remain uncolored.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
It does not occur in other software or in the LibreOffice 25.8 series, so I suspect this is a LibreOffice-specific regression introduced in master after the libreoffice-25-8-branch-point.

[Reproduced]
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 8; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded Jumbo

[Not reproduced]
Version: 25.8.3.1 (X86_64)
Build ID: 52ad9dd1c984050a9fb6932dbfb16e86a49e9758
CPU threads: 8; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded Jumbo
Comment 1 nutka 2025-11-03 17:48:25 UTC
Reproducible with 26.2.0.0, not occuring in 25.8.2.2

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 8; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Raster; VCL: win
Locale: en-US (fr_FR); UI: en-US
Calc: threaded


Version: 25.8.2.2 (X86_64)
Build ID: d401f2107ccab8f924a8e2df40f573aab7605b6f
Comment 2 nobu 2025-11-04 08:59:56 UTC
Not reproducible
[2025-06-10]
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 389325166a3357d7a4e557dc4c223fe0bb7aeadd
CPU threads: 4; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: ja-JP (ja_JP); UI: en-US
Calc: CL threaded

===

Reproducible
[2025-07-23]
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7f4868348c14b305fcd75744e1e3544d0d3a5d61
CPU threads: 4; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: ja-JP (ja_JP); UI: en-US
Calc: CL threaded
Comment 3 Saburo 2025-11-05 11:18:17 UTC
Bibisected with win64-26.2 7686c6aa670f6c28b92e8ad5f2eb94f3304564ac is the first bad commit

source 088a7c7c451321a800ca8d3523a18b6bb93239b7

author	Noel Grandin <noelgrandin@gmail.com>	Tue Sep 24 16:18:11 2024 +0200

remove alpha device from OutputDevice


adding CC: Noel Grandin
Please, take a look?
Comment 4 Takenori Yasuda 2025-11-06 14:33:21 UTC
Just confirmed the bug with BabelStone Flags as well…
Starting to wonder — maybe this is occurring across all color fonts?
Comment 5 Khaled Hosny 2025-11-13 13:49:59 UTC
This seems to affect all color fonts with COLR table, possibly other color font formats as well.
Comment 6 Khaled Hosny 2025-11-13 15:34:14 UTC
It is even worse on master, now the full glyph box is black.
Comment 7 Khaled Hosny 2025-11-20 10:37:22 UTC
Created attachment 204132 [details]
Test document with embedded color font
Comment 8 Khaled Hosny 2025-11-20 10:39:26 UTC
Created attachment 204133 [details]
Screenshot on master
Comment 9 Khaled Hosny 2025-11-20 10:46:05 UTC
Created attachment 204134 [details]
Screenshot with 25.8.3.2

This is how it should look like. Earlier the colored circle in the middle had a dark background (which is what this bug about), but when I can’t reproduce that anymore.
Comment 10 Khaled Hosny 2025-11-20 10:53:23 UTC
Created attachment 204135 [details]
Screenshot on master with Skia/Raster

On master with Skia/Raster the result is slightly different, but still not correct.
Comment 11 Commit Notification 2025-11-21 12:54:03 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1e1c9a6da141e37e862cdb8bacfb685f4da40251

tdf#169225 Color emoji background appears black with certain fonts

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.