tdf#169225 Color emoji background appears black with certain fonts

regression from
  commit 088a7c7c451321a800ca8d3523a18b6bb93239b7
  Author: Noel Grandin <noelgrandin@gmail.com>
  Date:   Tue Sep 24 16:18:11 2024 +0200
  remove alpha device from OutputDevice

Change-Id: I4ae192136479bcb1ef8e6195bc5b1115d7a0425b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/194312
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>